M6(F): Fixes align of broken images Adds placeholder text to input Fixes input button text Adjusts search page to display all results without creating a vertical line

--- a/search_bar/search_bar.css
+++ b/search_bar/search_bar.css
@@ -1,12 +1,6 @@
 .search-bar {
 }
-.search-page-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  padding: 16px 15%;
-}
+
 .search-bar-input-container {
   display: flex;
   justify-content: center;
@@ -30,7 +24,7 @@
   border-right: none;
   padding-left: 12px;
   padding-right: 32px;
-  font-size: 1.1rem;
+  font-size: 1rem;
   min-width: 0;
   align-self: stretch;
 }
@@ -45,16 +39,16 @@
 .search-bar-input-button {
   background-color: rgb(50, 132, 255);
   border: none;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   /* border: solid rgba(0, 0, 0, 0.726) 1px; */
-  padding: 10px 20px;
+  padding: 8px 16px;
   color: rgb(244, 244, 250);
 }
 .search-bar-results-list {
-  padding: 8px 0;
+  padding-top: 4px;
 }
 .search-bar-results-list-result {
-  padding: 8px 0px;
+  padding: 4px 0px;
   padding-left: 16px;
   color: blue;
 
@@ -76,6 +70,12 @@
 }
 .search-bar-results-list-result-text-aside-container {
   display: flex;
+}
+.search-bar-results-list-result-image-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 32px;
 }
 .search-bar-results-list-result-image {
   max-height: 32px;
